# podcast-theme-analyzer

./: .env.example  README.md  architecture.md  pyproject.toml  tasks.md
config/: defaults.yaml
src/common/: config.py
src/ingestion/: __init__.py  db.py
tests/: test_config_loader.py  test_ingestion_db.py
