[tool.poetry]
name = "podcast-theme-analyzer"
version = "0.1.0"
description = "A tool to analyze themes in podcasts."
authors = ["Xan <dev@xan.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
typer = {extras = ["all"], version = "^0.17.4"}
duckdb = "^1.3.2"
lxml = "^6.0.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
